Fix the hang-up in the legacy node-editing actions

Special thanks to Anton Saraev for preparing initial patch for the bug!

Node Manager is one of few places in Krita which are not ported to
strokes yet and continues to use KisLegacyUndoAdapter. Ideally its
actions should run asynchronously using KisProcessingsApplicator,
but for now we will just check whether the node is locked or not.

BUG:328617