krita/ui/kis_node_manager.cpp
@@ -398,6 +398,11 @@ void KisNodeManager::createNode(const QString & nodeType, bool quiet)
         activeNode = m_d->view->image()->root();
     }
 
+    KIS_ASSERT_RECOVER_RETURN(activeNode);
+    if (activeNode->systemLocked()) {
+        return;
+    }
+
     // XXX: make factories for this kind of stuff,
     //      with a registry
 
